# spot-ros-pkg

./: LICENSE
scripts/: generate_urdf_srdf.sh
spot_cartesio/: package.xml  rviz_cartesio.rviz  spot.launch  spot_stack.yaml
spot_config/: package.xml  spot_basic.yaml
spot_gazebo/: package.xml  xbot_control.gazebo.xacro
spot_gazebo/launch/: spot_world.launch
spot_srdf/: package.xml
spot_srdf/srdf/: spot.srdf  spot.srdf.xacro  spot_kinova.srdf.xacro
spot_urdf/: package.xml
spot_urdf/launch/: spot.rviz  spot_rviz.launch  spot_world.launch
spot_urdf/urdf/: accessories.urdf.xacro  leg.gazebo.xacro  spot.urdf  spot.urdf.xacro
