<package format="2">
  <name>spot_urdf</name>
  <version>0.0.0</version>
  <description>
  urdf of the Boston Dynamics quadruped robot Spot
  </description>
  <maintainer email="pippo@iit.it">Pippo De Pippis</maintainer>
  <license>none</license>



 <buildtool_depend>catkin</buildtool_depend> 
 <exec_depend>xacro</exec_depend>
<!--  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend> -->

<!--  <exec_depend>roscpp</exec_depend> 
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend> -->

</package>
